[gd_scene load_steps=40 format=2]

[ext_resource path="res://effects/vignette.png" type="Texture" id=1]
[ext_resource path="res://levels/Levels.gd" type="Script" id=2]
[ext_resource path="res://effects/Fade.tscn" type="PackedScene" id=3]
[ext_resource path="res://effects/black.png" type="Texture" id=4]
[ext_resource path="res://sprites/photo_0.png" type="Texture" id=5]
[ext_resource path="res://levels/PuzzlePieces.gd" type="Script" id=6]
[ext_resource path="res://effects/Illumination.tscn" type="PackedScene" id=7]
[ext_resource path="res://effects/Cursor.tscn" type="PackedScene" id=8]
[ext_resource path="res://sound/Nature.wav" type="AudioStream" id=9]
[ext_resource path="res://sound/PhotographSound.wav" type="AudioStream" id=10]
[ext_resource path="res://sound/Error.wav" type="AudioStream" id=11]
[ext_resource path="res://sprites/photo_1.png" type="Texture" id=12]
[ext_resource path="res://sprites/photo_2.png" type="Texture" id=13]
[ext_resource path="res://sprites/photo_3.png" type="Texture" id=14]
[ext_resource path="res://sprites/photo_4.png" type="Texture" id=15]
[ext_resource path="res://sprites/photo_5.png" type="Texture" id=16]
[ext_resource path="res://sprites/photo_6.png" type="Texture" id=17]
[ext_resource path="res://sprites/Animated_rails.png" type="Texture" id=18]
[ext_resource path="res://sprites/train_tiny.png" type="Texture" id=19]
[ext_resource path="res://sprites/photo_7.png" type="Texture" id=20]
[ext_resource path="res://sprites/photo_8.png" type="Texture" id=21]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 81, 41 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 17 )
region = Rect2( 0, 0, 192, 108 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 16 )
region = Rect2( 0, 0, 192, 108 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 192, 108 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 12 )
region = Rect2( 0, 0, 192, 108 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 20 )
region = Rect2( 0, 0, 192, 108 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 15 )
region = Rect2( 0, 0, 192, 108 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 14 )
region = Rect2( 0, 0, 192, 108 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 13 )
region = Rect2( 0, 0, 192, 108 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 21 )
region = Rect2( 0, 0, 192, 108 )

[sub_resource type="SpriteFrames" id=11]
animations = [ {
"frames": [ SubResource( 2 ) ],
"loop": true,
"name": "level_6",
"speed": 5.0
}, {
"frames": [ SubResource( 3 ) ],
"loop": true,
"name": "level_5",
"speed": 5.0
}, {
"frames": [ SubResource( 4 ) ],
"loop": true,
"name": "level_0",
"speed": 5.0
}, {
"frames": [ SubResource( 5 ) ],
"loop": true,
"name": "level_1",
"speed": 5.0
}, {
"frames": [ SubResource( 6 ) ],
"loop": true,
"name": "level_7",
"speed": 5.0
}, {
"frames": [ SubResource( 7 ) ],
"loop": true,
"name": "level_4",
"speed": 5.0
}, {
"frames": [ SubResource( 8 ) ],
"loop": true,
"name": "level_3",
"speed": 5.0
}, {
"frames": [ SubResource( 9 ) ],
"loop": true,
"name": "level_2",
"speed": 5.0
}, {
"frames": [ SubResource( 10 ) ],
"loop": true,
"name": "level_8",
"speed": 5.0
} ]

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 18 )
region = Rect2( 0, 0, 192, 3 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 18 )
region = Rect2( 0, 3, 192, 3 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 18 )
region = Rect2( 0, 6, 192, 3 )

[sub_resource type="SpriteFrames" id=15]
animations = [ {
"frames": [ SubResource( 12 ), SubResource( 13 ), SubResource( 14 ) ],
"loop": true,
"name": "default",
"speed": 48.0
} ]

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 19 )
region = Rect2( 0, 0, 400, 8 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 19 )
region = Rect2( 0, 8, 400, 8 )

[sub_resource type="SpriteFrames" id=18]
animations = [ {
"frames": [ SubResource( 16 ), SubResource( 17 ) ],
"loop": true,
"name": "default",
"speed": 1.0
} ]

[node name="Levels" type="Node2D"]
script = ExtResource( 2 )

[node name="Background" type="Sprite" parent="."]
texture = ExtResource( 4 )
centered = false
region_enabled = true
region_rect = Rect2( 0, 0, 192, 108 )
__meta__ = {
"_edit_lock_": true
}

[node name="PostcardArea" type="Area2D" parent="."]
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="PostcardArea"]
position = Vector2( 96, 54 )
shape = SubResource( 1 )
disabled = true

[node name="Postcard" type="AnimatedSprite" parent="."]
frames = SubResource( 11 )
animation = "level_8"
offset = Vector2( 96, 50 )
__meta__ = {
"_edit_lock_": true
}

[node name="rails" type="AnimatedSprite" parent="."]
position = Vector2( 96, 105 )
frames = SubResource( 15 )
frame = 1
playing = true
__meta__ = {
"_edit_lock_": true
}

[node name="TinyTrain" type="AnimatedSprite" parent="."]
position = Vector2( -401, 98 )
frames = SubResource( 18 )
frame = 1
playing = true
centered = false

[node name="PuzzlePieces" type="Node2D" parent="."]
script = ExtResource( 6 )
__meta__ = {
"_edit_lock_": true
}

[node name="Vignette" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0.290196 )
texture = ExtResource( 1 )
centered = false
__meta__ = {
"_edit_lock_": true
}

[node name="Fade" parent="." instance=ExtResource( 3 )]

[node name="Cursor" parent="." instance=ExtResource( 8 )]
position = Vector2( -30.4787, 25.7567 )

[node name="NatureSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )
volume_db = -12.0
bus = "Atm"

[node name="Tween" type="Tween" parent="."]

[node name="Illumination" parent="." instance=ExtResource( 7 )]

[node name="FlashSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )
bus = "Fx"

[node name="Errorsound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )
bus = "Fx"
[connection signal="input_event" from="PostcardArea" to="." method="_on_PostcardArea_input_event"]
[connection signal="mouse_entered" from="PostcardArea" to="." method="_on_PostcardArea_mouse_entered"]
[connection signal="mouse_exited" from="PostcardArea" to="." method="_on_PostcardArea_mouse_exited"]
